# rust-by-example

./: Cargo.toml
src/: formatted-print.rs
